Prevent line breaks in table when language is zh

--- a/src/App.css
+++ b/src/App.css
@@ -12,48 +12,52 @@ a.change-lang {
     cursor: pointer;
 }
 
-.stats-table th {
+#stats-table th {
     text-align: center;
 }
 
-.stats-table td {
+#stats-table td {
     text-align: right;
     vertical-align: middle;
     padding-left: 0.5rem !important;
     padding-right: 0.5rem !important;
 }
 
-.stats-table tr:first-child>th {
+#stats-table tr:first-child>th {
     border-top: thin solid black;
 }
 
-.stats-table tr>th:first-child {
+#stats-table tr>th:first-child {
     border-left: thin solid black;
 }
 
-.stats-table tr>th:last-child {
+#stats-table tr>th:last-child {
     border-right: thin solid black;
 }
 
-.stats-table td.all-border {
+#stats-table td.all-border {
     border: thin solid black;
 }
 
-.stats-table tr>td:first-child {
+#stats-table tr>td:first-child {
     border-left: thin solid black;
 }
 
-.stats-table tr>td:last-child {
+#stats-table tr>td:last-child {
     border-right: thin solid black;
 }
 
-.stats-table tr.bottom-border td,
+#stats-table tr.bottom-border td,
 td.bottom-border {
     border-bottom: thin solid black;
 }
 
-.stats-table>tbody>tr:nth-of-type(2n+1)>td.color-bg {
+#stats-table>tbody>tr:nth-of-type(2n+1)>td.color-bg {
     background-color: #f2f2f2;
+}
+
+#stats-table.zh td {
+    white-space: nowrap;
 }
 
 .has-tooltip {
